--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,5 +1,8 @@
-$theme: #40a944;
+$theme: #9399ff;
+$font-color: #eeeeee;
 $secondary: #000;
+
+$background: #142850;
 
 $border-color: rgba(0, 0, 0, 0.1);
 
